.golden/85163210393859768/golden

INITIALPATH:7:20: error:
    • INITIALPATH:7:27:
  |
7 | main = putStrLn [f|{1 + - / lalalal}|]
  |                           ^
Parse error: /

    • In the quasi-quotation: [f|{1 + - / lalalal}|]
  |
7 | main = putStrLn [f|{1 + - / lalalal}|]
  |                    ^^^^^^^^^^^^^^^^^^^
